Fix: Ajuste no input de peso Atualizei a estrutura do input de peso no projeto para aceitar valores acima de 99.9, conforme solicitado no issue recentemente aberto. Agora, a correção permite a inserção bem-sucedida de valores superiores a 99.9.
Reajustei algumas classes, substituindo por className para corrigir alguns erros que estavam sendo exibidos no console.

--- a/src/Components/Calculadora/calc.css
+++ b/src/Components/Calculadora/calc.css
@@ -17,6 +17,11 @@
   margin-top: 20px;
   font-size: 1.5rem;
   font-weight: bold;
+  text-align: center;
+}
+.instruction {
+  font-size: 0.8rem;
+  color: #767474;
 }
 .contentInput {
   padding: 10px 5px;
