--- a/src/Components/global.css
+++ b/src/Components/global.css
@@ -23,7 +23,7 @@ body {
   background-color: #242424;
 }
 
-.footer-container {
+.footerContainer {
   font-weight: bold;
   margin-top: 100px;
   margin-bottom: 20px;
@@ -36,14 +36,14 @@ body {
   color: #6ec1e4;
 }
 
-.react-logo {
+.reactLogo {
   margin-bottom: -8px;
   width: 30px;
   height: 30px;
   transition: transform 1s ease-in-out;
 }
 
-.react-logo {
+.reactLogo {
   transform: rotate(45deg); /* Altere o ângulo conforme necessário */
   animation: rotateAnimation 3s infinite linear; /* Adiciona uma animação de rotação contínua */
 }
